fix mobile alignment issues

--- a/style.sass
+++ b/style.sass
@@ -273,6 +273,8 @@ footer .container, .footer-nav
 .arrow-mobility
     margin-left: calc(8px + 1.5625vw)      
     top: 20%
+.arrow-better-living
+    margin-right: calc(8px + 1.5625vw)
 #values
     margin-top: 120px
     margin-bottom: 145px
@@ -361,6 +363,7 @@ footer .container, .footer-nav
     margin-top: 72px
     margin-bottom: 120px
     overflow: hidden
+    position: relative
 #mission img
     z-index: -1
     border-radius: 50%
@@ -374,7 +377,7 @@ footer .container, .footer-nav
     align-items: center
 .arrow-mission
     position: absolute
-    top: 60%
+    top: 25%
     left: calc(8px + 1.5625vw) 
 #mission h2 
     margin-top: 56px
